# tumatura-backend-python

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: docker_publish.yml  pr_checks.yml
dockerfiles/: Dockerfile.api  Dockerfile.bot
src/: main.py
src/db_models/: tumatura.py
src/modules/api/: api.py  auth.py  routers.py
src/modules/api/endpoints/: discord_roles.py
src/modules/api/rules/: common.py  discord_roles_data.py
src/modules/discord_bot/: client.py
src/utils/: discord_utils.py  logger.py  mongo_utils.py  role_utils.py  wp_utils.py
