[tool.poetry]
name = "tumatura-backend-python"
version = "0.1.0"
description = ""
authors = ["Mikołaj Kaczmarek <mikolaj.kaczmarek@kanalstudentcki.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.3.2"
fastapi = "^0.104.1"
mongoengine = "^0.27.0"
pydantic = "^2.6.0"
requests = "^2.31.0"
uvicorn = "^0.24.0.post1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
mongoengine-stubs = "^0.24.0"
mypy = "^1.3.0"
pytest = "^7.1.3"
types-requests = "^2.31.0.10"


[build-system]
requires = ["poetry-core>=1.7.1"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
follow_links = false

[tool.mypy]
strict = true
disallow_untyped_calls = false
disallow_any_generics = false
warn_return_any = false
